--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/styled": "^11.10.6",
     "@material-ui/icons": "^4.11.3",
     "@mui/lab": "^5.0.0-alpha.127",
     "@mui/material": "^5.12.1",
@@ -18,9 +17,11 @@
     "formik": "^2.2.9",
     "material-table": "1.69.3",
     "moment": "^2.29.4",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "@material-ui/core": "^4.12.4",
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.10.6",
     "react-avatar": "^5.0.3",
     "react-bootstrap": "^2.3.0",
     "react-datepicker": "^4.25.0",
